tests/outref/TC007.ref
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_KEY : Missing key 0 in table T1; max key was 10
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_KEY : Missing key 1 in table T1; max key was 10
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_KEY : Missing key 2 in table T1; max key was 10
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_KEY : Missing key 3 in table T1; max key was 10
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_KEY : Missing key 4 in table T1; max key was 10
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_KEY : Missing key 6 in table T1; max key was 10
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_KEY : Missing key 8 in table T1; max key was 10
[ERROR] PATH:LINENUM DATE TIME : ERR_MISSING_KEY : Missing key 9 in table T1; max key was 10
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: create table t1 (a int key num 10, b int key num 5, c int key num 7);

[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_TABLE : Unknown table: T1
Error with syntax near (line 1, column 15):

select * from t1;
              ^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from t1;

